--- a/Aula3/Exercicio2/manifest.json
+++ b/Aula3/Exercicio2/manifest.json
@@ -1,19 +1,20 @@
 {
     "name": "Account-Maker",
-    "short_name": "Form A-M",
-    "start_url": "account-maker",
+    "short_name": "Account",
+    "start_url": "/index.html",
     "display": "standalone",
+    "scope": "/",
     "background_color": "#00f",
     "description": "Formulário",
     "icons": [
         {
-            "src": "_img/icon1.png",
-            "sizes": "48x48",
-            "type": "image/png"
+            "src": "_img/icon1.jpeg",
+            "sizes": "360x360",
+            "type": "image/jpeg"
         },
         {
-            "src": "_img/icon1.png",
-            "sizes": "48x48",
+            "src": "_img/icon2.png",
+            "sizes": "820x558",
             "type": "image/png"
         }
     ]
